--- a/stratoserp_base.info.yml
+++ b/stratoserp_base.info.yml
@@ -17,7 +17,6 @@ dependencies:
   - config
   - comment
   - contextual
-  - contact
   - datetime
   - datetime_range
   - dynamic_page_cache
@@ -48,9 +47,7 @@ dependencies:
   # Contrib modules
   - admin_toolbar
   - admin_toolbar_tools
-  #- chartjs_api
-  - chosen
-  - chosen_field
+  - chartjs_api
   - date_popup
   - duration_field
   - dynamic_entity_reference
@@ -59,6 +56,7 @@ dependencies:
   - field_group
   - fullcalendar_view
   - geolocation
+  - geolocation_google_maps
   - hook_event_dispatcher
   #- json_field
   - linkit
