Adjusting missing/removed modules.

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/chartjs_api": "^1.1",
         "drupal/core": "^9",
         "drupal/core-composer-scaffold": "^9",
+        "drupal/date_popup": "^1.1",
         "drupal/duration_field": "^2.0@rc",
         "drupal/dynamic_entity_reference": "^1.10",
         "drupal/eva": "^2.1",
@@ -28,7 +29,10 @@
         "drupal/fullcalendar_view": "^5.0",
         "drupal/geolocation": "^3.2",
         "drupal/hook_event_dispatcher": "^2.1",
+        "drupal/linkit": "^6@dev",
         "drupal/multiple_fields_remove_button": "1.*@dev",
+        "drupal/replicate": "^1.0",
+        "drupal/replicate_ui": "^1.0",
         "drupal/token": "^1.7",
         "drupal/toolbar_menu": "^2.2",
         "drupal/twig_tweak": "^3.0",
