--- a/stratoserp_base.info.yml
+++ b/stratoserp_base.info.yml
@@ -6,7 +6,7 @@ core: 8.x
 core_version_requirement: ^8 || ^9
 
 distribution:
-  name: Distribution for StratosERP
+  name: StratosERP
 
 dependencies:
   - action
