--- a/config/install/block.block.stratos_userlogin.yml
+++ b/config/install/block.block.stratos_userlogin.yml
@@ -15,5 +15,5 @@ settings:
   id: user_login_block
   label: 'User login'
   provider: user
-  label_display: visible
+  label_display: '0'
 visibility: {  }
