--- a/stratoserp_base.info.yml
+++ b/stratoserp_base.info.yml
@@ -2,7 +2,6 @@ name: StratosERP
 type: profile
 description: 'StratosERP base install.'
 version: VERSION
-core: 8.x
 core_version_requirement: ^8 || ^9
 
 distribution:
@@ -63,6 +62,7 @@ dependencies:
   - replicate
   - replicate_ui
   - token
+  - tvi
   - views_bulk_operations
   - views_data_export
   - webform
