--- a/stratoserp_base.info.yml
+++ b/stratoserp_base.info.yml
@@ -100,9 +100,10 @@ dependencies:
   # Item & types
   - se_item
   - se_assembly
+  - se_recurring
   - se_service
   - se_stock
-  - se_recurring
+  - se_untracked_stock
 
   # Integrations
   #- se_xero
