--- a/stratoserp_base.info.yml
+++ b/stratoserp_base.info.yml
@@ -14,7 +14,6 @@ dependencies:
   - breakpoint
   - ckeditor
   - config
-  - comment
   - contextual
   - datetime
   - datetime_range
@@ -29,11 +28,9 @@ dependencies:
   - inline_form_errors
   - layout_discovery
   - menu_ui
-  - node
   - options
   - path
   - page_cache
-  #- search
   - taxonomy
   - telephone
   - token
@@ -60,15 +57,12 @@ dependencies:
   - geolocation_google_maps
   - hook_event_dispatcher
   - linkit
-  - multiple_fields_remove_button
   - token
   - tvi
   - views_bulk_operations
   - views_data_export
-  - webform
-  - webform_ui
 
-  # Stratos ERP
+  # Stratoserp
   - stratoserp
   - se_accounting
   - se_bill
@@ -106,9 +100,10 @@ dependencies:
   # Item & types
   - se_item
   - se_assembly
+  - se_bulk_stock
+  - se_recurring
   - se_service
   - se_stock
-  - se_recurring
 
   # Integrations
   #- se_xero
@@ -117,6 +112,6 @@ themes:
   # Admin theme
   - seven
 
-  # Stratos ERP theme needs bootstrap for base theme
+  # StratosERP theme needs bootstrap for base theme
   - bootstrap4
   - stratoserp_theme
