--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "drupal/views_bulk_operations": "^4.0",
         "drupal/webform": "^6.1",
         "oomphinc/composer-installers-extender": "^2.0",
-        "singularo/shepherd-drupal-scaffold": "dev-php8",
+        "singularo/shepherd-drupal-scaffold": "dev-develop",
         "vlucas/phpdotenv": "^5.1",
         "webflo/drupal-finder": "^1.2",
         "zaporylie/composer-drupal-optimizations": "^1.2"
