--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         "ext-mbstring": "*",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/admin_toolbar": "^3.0",
+        "drupal/admin_toolbar": "^3.1",
         "drupal/bootstrap4": "^2.1",
         "drupal/chartjs_api": "^1.1",
-        "drupal/core": "^9.3",
-        "drupal/core-composer-scaffold": "^9.3",
+        "drupal/core": "^9.4",
+        "drupal/core-composer-scaffold": "^9.4",
         "drupal/duration_field": "^2.0",
         "drupal/dynamic_entity_reference": "^1.12",
         "drupal/entity_print": "^2.4",
@@ -33,8 +33,11 @@
         "drupal/toolbar_menu": "^2.2",
         "drupal/tvi": "^1.0",
         "drupal/twig_tweak": "^3.1",
+        "drupal/username_enumeration_prevention": "^1.2",
         "drupal/views_bulk_operations": "^4.0",
         "drupal/webform": "^6.1",
+        "drush/drush": "^11",
+        "guzzlehttp/guzzle": "7.4.5 as 6.5.8",
         "oomphinc/composer-installers-extender": "^2.0",
         "singularo/shepherd-drupal-scaffold": "dev-develop",
         "vlucas/phpdotenv": "^5.1",
