--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "type": "drupal-profile",
     "homepage": "https://github.com/stratoserp/stratoserp_base",
     "license": "GPL-2.0-or-later",
+    "authors": [
+        { "name": "Simon Lindsay", "role": "Developer" }
+    ],
     "repositories": [
         { "type": "composer", "url": "https://packages.drupal.org/8" },
         { "type": "composer", "url": "https://asset-packagist.org" }
