--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,7 @@
         "drupal/views_bulk_operations": "^4.0",
         "drupal/webform": "^6.1",
         "drush/drush": "^11",
-        "oomphinc/composer-installers-extender": "^2.0",
-        "singularo/shepherd-drupal-scaffold": "dev-develop",
-        "vlucas/phpdotenv": "^5.1",
-        "webflo/drupal-finder": "^1.2",
-        "zaporylie/composer-drupal-optimizations": "^1.2"
+        "singularo/shepherd-drupal-scaffold": "dev-develop"
     },
     "suggest": {
         "drupal/drush": "Required for some of the utlity commands.",
@@ -65,8 +61,6 @@
             "cweagans/composer-patches": true,
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
-            "zaporylie/composer-drupal-optimizations": true,
-            "oomphinc/composer-installers-extender": true,
             "singularo/shepherd-drupal-scaffold": true
         }
     },
