--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "drupal/admin_toolbar": "^3.1",
         "drupal/bootstrap4": "^2.1",
         "drupal/chartjs_api": "^1.1",
-        "drupal/core": "^9.4",
-        "drupal/core-composer-scaffold": "^9.4",
+        "drupal/core": "^9 || ^10",
         "drupal/duration_field": "^2.0",
         "drupal/dynamic_entity_reference": "^3.0",
         "drupal/eva": "^3.0",
