Workflows field is required now.

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/username_enumeration_prevention": "^1.2",
         "drupal/views_bulk_operations": "^4.0",
         "drupal/webform": "^6.1",
+        "drupal/workflows_field": "^2.0@alpha",
         "drush/drush": "^11",
         "singularo/shepherd-drupal-scaffold": "dev-develop"
     },
