--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/core": "^9 || ^10",
         "drupal/duration_field": "^2.0",
         "drupal/dynamic_entity_reference": "^3.0",
+        "drupal/entity_print": "^2.5",
         "drupal/eva": "^3.0",
         "drupal/extra_field": "^2.3",
         "drupal/field_group": "^3.4",
